cli/tests/testdata/error_syntax.js.out
error: The module's source code would not be parsed: Expected ',', got 'following' at [WILDCARD]/error_syntax.js:3:6
